--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,14 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto&display=swap");
 
-* {
-  font-family: "Roboto", "Bebas Neue";
-}
-body {
-  margin: 0px;
-}
-h1 {
-  color: #ffffff;
-}
 :root {
   --large-font-size-35: 35px;
   --medium-font-size-25: 25px;
@@ -23,7 +14,24 @@ h1 {
   --red-color: #d51820;
   --light-red-color: #ffa3a6;
   --dark-blue-color: #0b0819;
-  --black-color: #0b0819;
+  --black-color: #000000;
+}
+
+* {
+  font-family: "Roboto", "Bebas Neue";
+}
+
+body {
+  margin: 0px;
+}
+
+main {
+  display: flex;
+  flex-flow: column;
+}
+
+h1 {
+  color: #ffffff;
 }
 
 progress[value] {
@@ -31,7 +39,7 @@ progress[value] {
   -webkit-appearance: none;
   appearance: none;
 
-  width: 250px;
+  width: 100%;
   height: 20px;
 }
 
