--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,6 +11,7 @@
   --light-grey-color: #dddddd;
   --green-color: #29a643;
   --light-green-color: #b1ffc2;
+  --ultra-light-green-color: #f3fef4;
   --red-color: #d51820;
   --light-red-color: #ffa3a6;
   --dark-blue-color: #0b0819;
@@ -40,6 +41,7 @@ progress[value] {
   appearance: none;
 
   width: 100%;
+  min-width: 40vw;
   height: 20px;
 }
 
@@ -47,5 +49,4 @@ progress[value]::-webkit-progress-bar {
   background-color: #dddddd;
   border-radius: 4px;
   height: 8px;
-  width: 403px;
 }
